# aws-dash-architect

./: .gitignore  BRIDGE_AGENT_REWORK.md  CFGUARD_NEXT_PLAN.md  CLAUDE.md  Cargo.toml  EXPLORER_UI_MAP.md  LEGACY_STORAGE_REMOVAL_TODO.md  MERGE_PLAN.md  README.md  WEBVIEW_MERGE_PLAN.md  build.rs  deny.toml  package-lock.json  test_recovery_demo  test_webapp.html
.claude/commands/: dash-docs-validate.md  dash-docs.md  dash-references.md
.gitea/workflows/: release.yaml  test.yaml
.github/workflows/: release.yml
TODO/: AGENT-PERFORMANCE-TESTING.md  BOOKMARK_MANAGER_DESIGN.md  Multi-Pane-Explorer-Memory-Optimization.md  Multi-Pane-Explorer.md
TODOS/: AGENT_FEEDBACK_ENGINES.md  AGENT_LOGGING_ENHANCEMENTS.md  AGENT_SKILLS_IMPLEMENTATION.md  AGENT_SKILLS_INITIALIZATION_FLOW.md  AWS_EXPLORER_SERVICES.md  AWS_SDK_MISSING_SERVICES_RESOURCES.md  AWS_SDK_USAGE_REPORT.md  CFMANAGER.md  CLOUDWATCH_LOGS_FEATURE_PLAN.md  CODE_EXECUTION_TOOL.md  CODE_EXECUTION_TOOL_PART_2.md  CODE_EXECUTION_TOOL_PART_3.md  CODE_EXECUTION_TOOL_PART_4.md  CODE_EXECUTION_TOOL_PART_5.md  CODE_EXECUTION_TOOL_PART_6.md  DOCS_TODO.md  E2E_TEST_SCENARIOS.md  EXPLORER_TODO.md  FAILED_QUERIES_ERROR_CATEGORIES.md  GUARD_TODO.md  LOGGING_IMPROVEMENTS.md  MULTI_AGENT_DESIGN_DECISIONS.md  NEWSERVICES_TODO.md  NEXTSERVICE2_TODO.md  NEXTSERVICE3_TODO.md  NEXTSERVICE4_TODO.md  NEXTSERVICE5_TODO.md  NEXTSERVICES.md  NEXTSERVICE_TODO.md  PHASE2_LOADING.md  PHASE2_MANUAL_TESTING.md  PRICING_TODO.md  RESOURCE_DETAILS_PART1.md  RESOURCE_DETAILS_PART2.md  RESOURCE_DETAILS_PART3.md  RUSTY_V8_142_API_REFERENCE.md  SKILLS_QUICK_TEST_GUIDE.md  SKILL_SYSTEM_TEST_PLAN.md  TASK-AGENT.md  TEST_SUITE_REVIEW_REPORT.md  (+1 more)
docs/: ATTRIBUTION.md  AWS_SDK_TAG_METHODS_REFERENCE.md  CHANGELOG.md  EXPLORER_USER_GUIDE.md  cf-syntax.json  console_url_map.csv
docs/plans/: page-builder-two-prompts-plan.md
docs/technical/: README.md  adding-new-windows.md  agent-feedback-systems.md  agent-framework-v2.md  agent-injection-patterns-research.md  agent-middleware-guide.md  automated-login.md  aws-api-calls-inventory.md  aws-data-plane-integration-guide.md  aws-icon-system.md  aws-login-window.md  aws-service-integration-patterns.md  cli-verification-system.md  cloudformation-guard-system.md  cloudformation-manager-development.md  cloudformation-manager.md  cloudformation-system.md  code-execution-tool.md  command-palette-system.md  credential-management.md  download-manager.md  file-picker-system.md  keyboard-navigation-system.md  memory-management-system.md  multi-agent-system.md  multi-pane-architecture.md  notifications-system.md  page-builder-system.md  pages-manager.md  performance-monitoring-infrastructure.md  project-management.md  query-timing-monitoring.md  resource-explorer-caching.md  resource-explorer-system.md  resource-normalizers.md  sdk-error-handling.md  stood-perf-timing-plan.md  testing-patterns.md  ui-component-testing.md  ui-testing-framework.md  (+1 more)
docs/testing/: agent-feedback-testing.md
docs/userguide/: README.md  cloudformation-compliance.md  setup-iam-identity-center.md  troubleshooting.md
examples/: auto_login_demo.sh
memory-profiles/: README.md
reference/: AGENT_EXECUTION_TRACE.md  PROMPT_ANALYSIS_REPORT.md  README.md
scripts/: check_tags.py  clean-v8.sh  cleanup-incomplete-runs.sh  evaluate_agent.py  generate_resource_icons.py  memory-guard.sh  memory-monitor.sh  migrate_normalizers.py  profile-memory.sh  run-integration-tests.sh  safe-test.sh  source-map.py  sync-skills.sh  test-chunks.sh  test-frozen.sh  test-with-memory-monitor.sh
skills/aws-ec2-troubleshooting/: SKILL.md
src/: lib.rs  logging_macros.rs  main.rs  test_cloudformation_import.rs.disabled
src/app/: aws_identity.rs  aws_regions.rs  bedrock_client.rs  branch_detector.rs  branch_detector_integration_test.rs  bulk_rule_downloader.rs  cf_syntax.rs  cfn_dag.rs  cfn_guard.rs  cfn_intrinsic_functions.rs  cfn_resource_icons.rs  cfn_resource_policies.rs  cfn_resources.rs  cfn_template.rs  compliance_discovery.rs  fonts.rs  git_error_handling.rs  git_error_handling_test.rs  guard_repository_manager.rs  guard_rules_registry.rs  memory_profiling.rs  mod.rs  projects.rs  repository_recovery.rs  repository_recovery_integration_test.rs  sso_config.rs  webview.rs
tests/: README.md  UI_TESTING_SETUP.md  api_contract_simple_tests.rs  automated_login_test.rs  aws_identity_frozen_tests.rs  aws_identity_tests.rs  aws_real_world_templates.rs  bookmark_tests.rs  cfguard_integration_tests.rs  cfn_dag_frozen_tests.rs  cfn_dependency_validation_tests.rs  cfn_template_tests.rs  cfn_template_verification_tests.rs  cloudformation_graph_verification_tests.rs  compliance_menu_integration_test.rs  credentials_debug_integration_tests.rs  credentials_debug_window_tests.rs  dashui_tests.rs  end_to_end_guard_integration.rs  fixture_import_discrepancies_tests.rs  git_error_handling_integration_test.rs  intrinsic_function_classification_tests.rs  mod.rs  projects_frozen_tests.rs  projects_tests.rs  quick_test.rs  real_cfguard_integration_tests.rs  schema_constraint_tests.rs  tag_filter_tests.rs  tag_grouping_tests.rs  task_agent_integration_tests.rs  test_bulk_rule_download.rs  test_cfn_guard.rs  test_cfn_guard_execution.rs  test_compliance_discovery.rs  test_global_services.rs  test_guard_integration.rs  test_guard_repository_parsing.rs  test_guard_rules_registry.rs  test_project_guard_config.rs  (+6 more)
tests/fixtures/: empty_dag.json  test_template_10_resources.json
tests/snapshots/: aws_identity_frozen_tests__aws_account.snap  aws_identity_frozen_tests__aws_credentials.snap  projects_frozen_tests__cloudformation_resource.snap  projects_frozen_tests__environment_structure.snap  projects_frozen_tests__project_structure.snap  projects_frozen_tests__project_structure.snap.new  projects_frozen_tests__resource_node.snap  r#mod__cfn_dag_frozen_tests__empty_resource_dag.snap  r#mod__test_projects_frozen__cloudformation_resource.snap  r#mod__test_projects_frozen__environment_structure.snap  r#mod__test_projects_frozen__project_structure.snap  test_aws_identity_frozen__aws_account.snap  (+5 more)
(+521 files in other folders)
