[package]
name = "awsdash"
version = "0.1.0"
authors = ["Fernando Ibanez <fernando.ibanez@gmail.com>"]
edition = "2021"
default-run = "awsdash"
license = "Apache-2.0"
include = ["LICENSE-APACHE", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[[bin]]
name = "awsdash"
path = "src/main.rs"

[[bin]]
name = "auto_login_example"
path = "src/bin/auto_login_example.rs"

[dependencies]
# AI Agent framework
stood = { git = "https://github.com/fibanez/stood.git" }
async-trait = "0.1"

# UI framework
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use the glow rendering backend
    "persistence",   # Enable restoring app state
    "wayland",       # To support Linux
    "x11",           # Support older Linux distributions
] }
catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui32"] }
egui_extras = { version = "0.32", features = ["image", "svg"] }
egui_code_editor = "0.2.17"
egui_json_tree = "0.12"
image = "0.25.4"


# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
simple-logging = "2.0.2"
once_cell = "1.20"
clap = { version = "4.5", features = ["derive", "env"] }

# File and directory handling
directories = "5.0"
dirs = "5.0"
zip = "0.6.6"

# AWS support
aws-config = "1.1"
aws-sdk-ssooidc = "1.3"
aws-sdk-sso = "1.3"
aws-types = "1.3"
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-bedrock = "1.72"
aws-sdk-bedrockruntime = "1.72"
aws-sdk-organizations = "1.67"
aws-sdk-iam = "1.67"
aws-sdk-ec2 = "1.67"
aws-sdk-s3 = "1.67"
aws-sdk-cloudformation = "1.67"
aws-sdk-rds = "1.67"
aws-sdk-lambda = "1.67"
aws-sdk-dynamodb = "1.67"
aws-sdk-cloudwatch = "1.67"
aws-sdk-apigateway = "1.67"
aws-sdk-sns = "1.67"
aws-sdk-sqs = "1.67"
aws-sdk-ecs = "1.67"
aws-sdk-eks = "1.67"
aws-sdk-cloudwatchlogs = "1.67"
aws-sdk-apigatewayv2 = "1.67"
aws-sdk-kinesis = "1.67"
aws-sdk-sagemaker = "1.67"
aws-sdk-redshift = "1.67"
aws-sdk-glue = "1.67"
aws-sdk-athena = "1.67"
aws-sdk-ecr = "1.67"
aws-sdk-emr = "1.67"
aws-sdk-secretsmanager = "1.67"
aws-sdk-ssm = "1.67"
aws-sdk-backup = "1.67"
aws-sdk-eventbridge = "1.67"
aws-sdk-appsync = "1.67"
aws-sdk-mq = "1.67"
aws-sdk-codepipeline = "1.67"
aws-sdk-codebuild = "1.67"
aws-sdk-codecommit = "1.67"
aws-sdk-iot = "1.67"
aws-sdk-greengrassv2 = "1.67"
aws-sdk-kms = "1.67"
aws-sdk-sfn = "1.67"
aws-sdk-elasticloadbalancing = "1.67"
aws-sdk-elasticloadbalancingv2 = "1.67"
aws-sdk-route53 = "1.67"
aws-sdk-efs = "1.67"
aws-sdk-cloudtrail = "1.67"
aws-sdk-config = "1.76"
aws-sdk-acm = "1.67"
aws-sdk-acmpca = "1.67"
aws-sdk-wafv2 = "1.67"
aws-sdk-guardduty = "1.67"
aws-sdk-cloudfront = "1.67"
aws-sdk-elasticache = "1.67"
aws-sdk-neptune = "1.67"
aws-sdk-opensearch = "1.67"
aws-sdk-cognitoidentityprovider = "1.67"
aws-sdk-cognitoidentity = "1.67"
aws-sdk-batch = "1.67"
aws-sdk-firehose = "1.67"
aws-sdk-quicksight = "1.67"
aws-sdk-securityhub = "1.67"
aws-sdk-kafka = "1.67"
aws-sdk-detective = "1.67"
aws-sdk-accessanalyzer = "1.67"
aws-sdk-lakeformation = "1.67"
aws-sdk-databrew = "1.67"
aws-sdk-codeartifact = "1.67"
aws-sdk-codedeploy = "1.67"
aws-sdk-appconfig = "1.67"
aws-sdk-cloudtraildata = "1.67"

# CloudFormation Guard
cfn-guard = "3.1.2"

# HTTP and web
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.4"
percent-encoding = "2.3"
open = "5.0.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8.5"
regex = "1.7"
lazy_static = "1.4.0"
fuzzy-matcher = "0.3"
random_color = "0.7"
aws-smithy-runtime-api = "1.8.0"
aws-sdk-sts = "1.67.0"
aws-sdk-macie2 = "1.67"
aws-sdk-inspector2 = "1.67"
aws-sdk-timestreamquery = "1.67"
aws-sdk-docdb = "1.67"
aws-sdk-transfer = "1.67"
aws-sdk-datasync = "1.67"
aws-sdk-fsx = "1.67"
aws-sdk-workspaces = "1.67"
aws-sdk-apprunner = "1.67"
aws-sdk-globalaccelerator = "1.67"
aws-sdk-connect = "1.67"
aws-sdk-amplify = "1.67"
aws-sdk-lexmodelsv2 = "1.67"
aws-sdk-rekognition = "1.67"
aws-sdk-polly = "1.67"
aws-smithy-types = "1.1.1"

[dev-dependencies]
insta = { version = "1.34", features = ["json", "yaml"] }
pretty_assertions = "1.4"
tempfile = "3.8"
egui_kittest = { version = "0.32", features = ["snapshot", "wgpu"] }

[profile.test]
opt-level = 3
debug = 1
codegen-units=100

[profile.release]
opt-level = 3

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
#opt-level = 3
[profile.dev]
opt-level = 1  # Enable basic optimization to reduce stack usage
incremental = true
overflow-checks = true  # Keep debug safety checks

# Custom profile for development that avoids stack overflow
[profile.dev-safe]
inherits = "dev"
opt-level = 2  # More optimization to reduce stack usage
debug = true   # Keep debug symbols

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
